--- a/Anime.html
+++ b/Anime.html
@@ -1088,6 +1088,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/EljUwZJhpuYfVuSfqY8Pt1xxpH.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">ERASED</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2016</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://image.tmdb.org/t/p/original/3dl7QFrpvtu9My4L6K7KtUMP8p1.jpg"
                 class="movie-poster"
               />
@@ -1376,17 +1412,17 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
-                src="https://image.tmdb.org/t/p/original/ecQ84z2sR0XapZu435MnFuEBzD8.jpg"
+                src="https://image.tmdb.org/t/p/original/9uldRGP5kioN9POb71Zww9AuBYg.jpg"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Haikyu!!</h2>
+              <h2 class="movie-title">Assassination Classroom</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> TBA</span
+                    ><img src="./images/IMDb_logo.png" /> 9.0</span
                   >
                 </div>
-                <span class="movie-year-text">2014</span>
+                <span class="movie-year-text">2015</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -1459,6 +1495,42 @@
                   >
                 </div>
                 <span class="movie-year-text">2014</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/roPwJe7Km5F7TUJDgbNGTHkvcGZ.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Wistoria: Wand and Sword</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
+                </div>
+                <span class="movie-year-text">2024</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -1592,6 +1664,78 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/nVmc8K5J7SGMlE6tA5lVzVzAzQ9.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">I Parry Everything</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.8</span
+                  >
+                </div>
+                <span class="movie-year-text">2024</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/cXBfjZSdJelu2r0wKD7qCxS71kb.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Parasyte -the maxim-</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.8</span
+                  >
+                </div>
+                <span class="movie-year-text">2014</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://image.tmdb.org/t/p/original/yBj5Pay8FtVTkAkIy6bUc3NLTnw.jpg"
                 class="movie-poster"
               />
@@ -1639,6 +1783,186 @@
                   >
                 </div>
                 <span class="movie-year-text">2019</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/6qfZAOEUFIrbUH3JvePclx1nXzz.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Dan Da Dan</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.7</span
+                  >
+                </div>
+                <span class="movie-year-text">2024</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/ecQ84z2sR0XapZu435MnFuEBzD8.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Haikyu!!</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2014</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/6VjUfaGkt3DJPLlNmnm1ALEhSfv.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">The Misfit of Demon King Academy</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2020</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/kN0Nca1Deq0iK1AK5RtAiohWhZ9.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Berserk</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2016</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/hfTEDISVpFMqmp6uOGylsSakyXZ.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Fate/Zero</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2011</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -1747,42 +2071,6 @@
                   >
                 </div>
                 <span class="movie-year-text">2016</span>
-              </div>
-              <div class="action-circle">
-                <a href="#" class="icon AddFavorite">
-                  <div class="tooltip">Add to Favorite</div>
-                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-                </a>
-                <a href="#" class="icon RateIt">
-                  <div class="tooltip">Rate It</div>
-                  <span><i class="fa-solid fa-star"></i></span>
-                </a>
-                <a href="#" class="icon watchlist">
-                  <div class="tooltip">Add to Watchlist</div>
-                  <span><i class="bx bx-list-plus"></i></span>
-                </a>
-                <a href="https://www.youtube.com" class="icon youtube">
-                  <div class="tooltip">Play Trailer</div>
-                  <span><i class="fab fa-youtube"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="movie-item">
-            <div class="movie-content">
-              <img
-                src="https://image.tmdb.org/t/p/original/cXBfjZSdJelu2r0wKD7qCxS71kb.jpg"
-                class="movie-poster"
-              />
-              <h2 class="movie-title">Parasyte -the maxim-</h2>
-              <div class="movie-rating">
-                <div class="ratings-container">
-                  <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> TBA</span
-                  >
-                </div>
-                <span class="movie-year-text">2014</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
